k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-service-mesh
  name: spring-service-mesh
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: spring-service-mesh
