k8s/base/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: spring-service-mesh
  name: spring-service-mesh
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-service-mesh
    weight: 100
